--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,11 @@
     
 }
   /* style headaer */
+.nav-bar{
+  background-color: skyblue;
+  padding: 20px;
+  border-radius: 15px;
+}
 .nav-bar ul{
     display: flex;
     justify-content: end;
@@ -120,9 +125,40 @@
   flex-direction: column;
   row-gap: 15px;
 }
-
-
-  
+.footer{
+  background-color: rgb(255, 255, 255);
+  padding: 50px 250px;
+}
+.footer .Work-Inquiry{
+  background-image: url(../shapes/Group_33094_1.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 50px 40px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+.footer .Work-Inquiry{
+  display: flex;
+  justify-content: space-between;
+}
+.footer .Stay-connected{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.footer .icon{
+  display: flex;
+  column-gap: 5px;
+}
+.footer .icon img{
+  width: 20px;
+}
+.footer .icon img:hover{
+  border: 1px solid tomato;
+}
 
   /* responsive area */
   @media screen and (max-width:576px){
@@ -165,6 +201,20 @@
       .card-container .card{
         text-align: center;
       }
+      .footer{
+        background-color: rgb(255, 255, 255);
+        padding: 10px 20px;
+      }
+      .footer .Work-Inquiry{
+        padding: 15px 10px;
+        border-radius: 10px;
+        margin-bottom: 10px;
+        row-gap: 10px;
+        text-align: center;
+      }
+      .footer .Work-Inquiry{
+        flex-direction: column;
+      }
   }
   @media screen and (min-width:576px) and (max-width:992px){
     .header{
@@ -206,4 +256,17 @@
       .card-container .card{
         text-align: center;
       }
+      .footer{
+        background-color: rgb(255, 255, 255);
+        padding: 10px 20px;
+      }
+      .footer .Work-Inquiry{
+        padding: 15px 20px;
+        border-radius: 10px;
+        margin-bottom: 10px;
+        justify-content: space-between;
+        row-gap: 10px;
+        text-align: center;
+      }
+     
   } 
